[package]
name = "bot01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
reqwest = { version = "0.11.5", features = ["json", "blocking"], default-features = false }
tokio = { version = "1", features = ["full"], default-features = false }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.0"
anyhow = "1.0"
dotenv = "0.15.0"
thiserror = "1.0"
mongodb = "2"
bson = "1.0"
select = "0.5"